Fix more spacing issues

--- a/example-site/style.css
+++ b/example-site/style.css
@@ -27,23 +27,23 @@ body {
     flex-direction: row;
     background-color: #1F2937;
     color: white;
-    padding: 0 76px;
+    padding-left: 76px;
+    padding-right: 1px;
     padding-bottom: 30px;
+    gap: 25px;
 }
 
 .website-awesome {
     font-size: 48px;
     font-weight: bolder;
     color: #F9FAF8;
+    flex-grow: 2;
 }
 
 .awesome-sub {
     font-size: 18px;
     color: #E5E7EB;
-}
-
-.image {
-    justify-content: baseline;
+    padding-bottom: 10px;
 }
 
 .topButton {
@@ -51,7 +51,7 @@ body {
     border: none;
     border-radius: 4px;
     background: #3882F6;
-    padding: 2px 20px;
+    padding: 4px 24px;
     color: white;
 }
 
@@ -67,10 +67,10 @@ body {
 .container-1 {
     display: flex;
     justify-content: space-between;
-    gap: 20px;
+    gap: 25px;
     padding-top: 40px;
-    padding-left: 40px;
-    padding-right: 40px;
+    padding-left: 90px;
+    padding-right: 90px;
 }
 
 .container-2 {
@@ -79,8 +79,8 @@ body {
     gap: 20px;
     padding-top: 10px;
     padding-bottom: 25px;
-    padding-left: 40px;
-    padding-right: 40px;
+    padding-left: 90px;
+    padding-right: 90px;
 }
 
 .card-2 {
@@ -88,6 +88,7 @@ body {
     box-shadow: 2px 4px 16px rgba(0, 0, 0, .06);
     border-radius: 7px;
     text-align: center;
+    padding-bottom: 60px;
 }
 
 .card-1 {
@@ -99,7 +100,7 @@ body {
 .section-4 {
     display: flex;
     background-color: #EBE7EB;
-    padding: 140px;
+    padding: 100px;
     flex-direction: column;
 }
 
